# ubiquitous-computing-machine

./: README.md  environment.yaml  pyproject.toml
ubiquitous_computing_machine/: Ass2_notebook.ipynb  Problem1.ipynb  Problem2.ipynb  ___main__.py  plot.py  testbook.ipynb  utils.py
ubiquitous_computing_machine/Problem1/: __init__.py  part_1a.py  part_1b.py  part_1c.py  part_1d.py  part_1e.py  part_1ee.py  part_1f.py
ubiquitous_computing_machine/Problem2/: __init__.py  part_2a.py  part_2b.py  part_2c.py  part_2d.py  preprocess.py
ubiquitous_computing_machine/data/: pimaindiansdiabetes2_imputed.csv
