[tool.poetry]
name = "ubiquitous-computing-machine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.21.6,<1.28.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
requests = "^2.32.3"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
pygam = "^0.9.1"
tabulate = "^0.9.0"
torch = "^2.5.1"
nbformat = "^5.10.4"
pyppeteer = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
